config/monitoring-enabled/metrics_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: local-pv-cleaner
    metrics: enabled
  name: local-pv-cleaner-metrics
spec:
  ports:
    - name: metrics
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: local-pv-cleaner
