config/monitoring-enabled/allow_metrics_traffic.yaml
# This NetworkPolicy allows ingress traffic
# with Pods running on namespaces labeled with 'metrics: enabled'. Only Pods on those
# namespaces are able to gather data from the metrics endpoint.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: local-pv-cleaner
  name: local-pv-cleaner-allow-metrics-traffic
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: local-pv-cleaner
  policyTypes:
    - Ingress
  ingress:
    # This allows ingress traffic from any namespace with the label metrics: enabled
    - from:
      - namespaceSelector:
          matchLabels:
            prometheus.io/scraper: "true"
      ports:
        - port: 8080
          protocol: TCP
